Fixed filename text overflow.

--- a/src/MySync/ui/css/default.css
+++ b/src/MySync/ui/css/default.css
@@ -360,6 +360,7 @@ body
 
 .files_list {
     overflow-y: auto;
+    overflow-x: hidden;
 
     height: calc(100% - 50px); /* make space for lower menu */
     width: 100%;
